tests/rosetta/out/Erlang/21-game.error
run: exit status 127
/tmp/21-game.erl:17:18: syntax error before: 'rem'
escript: There were compilation errors.
